yaml/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: qdrouterd
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: qdrouterd
        version: v1
        type: qdrouterd
    spec:
      containers:
      - name: qdrouterd
        image: quay.io/interconnectedcloud/qdrouterd:1.8.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5672
          protocol: TCP
        volumeMounts:
        - name: qdr-config
          mountPath: /etc/qpid-dispatch
        - name: internal-certs
          readOnly: true
          mountPath: /etc/qpid-dispatch-certs/internal
      volumes:
      - name: qdr-config
        configMap:
          name: qdr-config
      - name: internal-certs
        secret:
          secretName: qdr-internal-cert
