yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging
  labels:
    app: amq-interconnect
spec:
  ports:
  - port: 5671
    name: amqps
  - port: 5672
    name: amqp
  - port: 8672
    name: console
  - port: 55672
    name: inter-router

  selector:
    type: qdrouterd
