yaml/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: amqps
spec:
  host: %s
  port:
    targetPort: inter-router
  tls:
    termination: passthrough
  to:
    kind: Service
    name: messaging
    weight: 100
  wildcardPolicy: None
